--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -77,7 +77,7 @@ p {
 }
 
 /*main section element formatting*/
-.content-block {
+.content-section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -86,7 +86,7 @@ p {
     color: #ffffff;
 }
 
-.content-block img {
+.content-section img {
     max-height: 200px;
 }
 
@@ -107,20 +107,42 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-block {
+.benefits-section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-block h3 {
+.benefits-section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-block img {
+.benefits-section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
+}
+
+/*Floating Back-To-Top Button*/
+/*Code found at https://stackoverflow.com/questions/32102747/how-to-make-a-back-to-top-button-using-css-and-html-only#:~:text=Utilize%20the%20tag.,an%20anchor%20with%20specified%20name.&text=Then%20your%20%22back%20to%20top%22%20link%20points%20to%20it.*/
+#myBtn {
+    position: fixed;
+    bottom: 10px;
+    float: right;
+    right: 5%;
+    left: 95%;
+    max-width: 30px;
+    width: 100%;
+    font-size: 12px;
+    border-color: rgba(85, 85, 85, 0.2);
+    background-color: rgb(100,100,100);
+    padding: .5px;
+    border-radius: 4px;
+
+}
+/*On Hover Color Change*/
+#myBtn:hover {
+    background-color: #7dbbf1;
 }
 
 /*footer element formatting*/
